infra/k8s/event-bus-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-deployment
spec:
  selector:
    matchLabels:
      app: event-bus
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
      - name: event-bus
        image: kodega2016/event-bus
        ports:
        - containerPort: 4005
---
apiVersion: v1
kind: Service
metadata:
  name: event-bus-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: event-bus
  ports:
  - name: event-bus
    protocol: TCP
    port: 4005
    targetPort: 4005
