infra/k8s/posts-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-deployment
spec:
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
      - name: posts
        image: kodega2016/posts
        ports:
        - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: posts-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: posts
  ports:
  - name: posts
    protocol: TCP
    port: 4000
    targetPort: 4000
