infra/k8s/posts-node-port-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-node-port-service
spec:
  type: NodePort
  selector:
    app: posts
  ports:
  - port: 4000
    targetPort: 4000
    nodePort: 31515
