infra/k8s/query-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
      - name: query
        image: kodega2016/query
        ports:
        - containerPort: 4002
---
apiVersion: v1
kind: Service
metadata:
  name: query-cluster-ip-service
spec:
  selector:
    app: query
  ports:
  - name: query
    protocol: TCP
    port:  4002
    targetPort: 4002
